--- a/.github/workflows/packer-workflow.yml
+++ b/.github/workflows/packer-workflow.yml
@@ -33,7 +33,7 @@ jobs:
         run: packer validate packer/nomad-server.pkr.hcl
 
       - name: Build AMI with Packer
-        run: packer build -var-file=packer/variables.pkr.hcl packer/nomad-server.pkr.hcl
+        run: packer build -var-file=scripts/variables.pkr.hcl scripts/nomad-server.pkr.hcl
 
       - name: Notify Success
         if: success()
